# Snek

./: .gitignore  .pre-comit-config.yaml  .pre-commit-config.yaml  404.html  Pipfile  index.html  mkdocs.yml  objects.inv  pyproject.toml
CuteSnek/: pyproject.toml
CuteSnek/CuteSnek.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
CuteSnek/SnekPlugins/: CuteSnek.py
FancySnek/: pyproject.toml
FancySnek/FancySnek.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
FancySnek/SnekPlugins/: FancySnek.py
Notebooks/CreateAPlugin/: index.html
PluginMount/: index.html
SimpleSnek/: index.html
SnekCore/: pyproject.toml
SnekCore/Snek/SnekCore/: PluginMount.py  SimpleSnek.py  SnekMountPoint.py  __init__.py  cli.py
SnekCore/SnekCore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
SnekMountPoint/: index.html
SnekPlugins/CuteSnek/: index.html
SnekPlugins/FancySnek/: index.html
docs/: PluginMount.md  SimpleSnek.md  SnekMountPoint.md
docs/Notebooks/: CreateAPlugin.ipynb
docs/SnekPlugins/: CuteSnek.md  FancySnek.md
notebooks/: example.ipynb  pipeline.ipynb
projects/CuteSnek/: pyproject.toml
projects/CuteSnek/src/SnekPlugins/CuteSnek/: CuteSnek.py  __init__.py
projects/FancySnek/: pyproject.toml
projects/FancySnek/src/SnekPlugins/: FancySnek.py
projects/FancySnek/src/SnekPlugins/FancySnek/: __init__.py
projects/SnekCore/: pyproject.toml  setup.cfg
projects/SnekCore/src/Snek/SnekCore/: PluginMount.py  SimpleSnek.py  SnekMountPoint.py  cli.py
