[tool.poetry]
name = "snek"
version = "0.1.0"
description = "A Microlib / Plugin Example"
authors = ["myg0t <mjtaylorroberts@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.5"
rich = "^13.3.1"
snekcore = {path = "SnekCore", develop = true}
cutesnek = {path = "CuteSnek", develop = true}
fancysnek = {path = "FancySnek", develop = true}
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
pdoc3 = "^0.10.0"
black = "^23.1.0"
ipykernel = "^6.21.2"
pandas = "^1.5.3"
jupyter = "^1.0.0"
notebook = "^6.5.2"
pandera = "^0.13.4"
hypothesis = "^6.68.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
