[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cutesnek"
version = "0.1.0"
description = "A Microlibrary / Plugin system"
dependencies = [
    "pydantic",
    "rich"
]

[project.optional-dependencies]
all = ["snekcore"]
dev = ["pre-commit", "pdoc3", "black"]

[project.entry-points."snek_types"]
cute_snek = "SnekPlugins.CuteSnek:CuteSnek"
