[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fancysnek"
version = "0.1.0"
description = "FancySnek plugin for the Snek framework."
dependencies = [
    "pydantic",
    "rich",
]

[project.optional-dependencies]
all = ["snekcore"]
dev = ["pre-commit", "pdoc3", "black"]

[project.entry-points."snek_types"]
fancy_snek = "SnekPlugins.FancySnek:FancySnek"
